# composition

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.hpp  LICENSE  Makefile  README.md  RenderPasses.hpp  RenderResult.hpp  Scene.hpp  Sphere.hpp  btest.py  cmp.cpp  cmp.hpp  composite.py  dev.blend  file.hpp  init.py  interface.cpp  main.cpp  render.py  render_sub.hpp  test.py
composition/: __init__.py  binterface.py  color.py  interface.py
composition/bi/: Context.py  Scene.py  __init__.py  binterface.py  helper.py
composition/color/: Ramp.py  RampData.py  __init__.py  basis.py  operators.py
composition/core/: __init__.py  dtype.py  functions.py  helper.py
scenes/: box.blend  composite.py  dev.blend  render.py
scenes/box/: box.blend  main.py
scenes/c-in/: c-in.blend  main.py
scenes/compare-in/: main.py  scene.blend
scenes/compare-out/: main.py  scene.blend
scenes/corona/: main.py
scenes/dev/: dev.blend  main.py
scenes/lake/: main.py
scenes/singleSphere/: main.py  sphere.blend
scenes/timenprr/: nprr.blend
src/: Camera.hpp  Image.hpp  Mesh.hpp  Random.hpp  RenderPass.hpp  RenderPasses.hpp  Scene.hpp  Sphere.hpp  accel.hpp  cmp.cpp  cmp.hpp  composition.cpp  composition.hpp  constant.h  data.hpp  file.hpp  interface.cpp  kdtree.hpp  kernel.cpp  kernel.hpp  main.cpp  print.hpp  render_sub.hpp  toString.hpp
src/interface/: CMakeLists.txt  data.cpp  interface.cpp  interface.hpp  renderer.cpp  scene.cpp
src/main/: CMakeLists.txt  main.cpp  ppm_based.cpp  pt_based.cpp  ref_ppm.cpp  ref_pt.cpp
